feat(fieldservice): Implement list endpoints for OperatingHours, Territory, Resource, and Appointment in OpenApi & SpringBoot
